# notely-db

./: Cargo.toml  Dockerfile
migrations/2020-11-25-191551_create_lists/: up.sql
migrations/2020-11-25-192341_create_items/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
src/database/: item.rs  list.rs  mod.rs
