[package]
name = "notely"
version = "0.1.0"
authors = ["Daniel Josefsson <daniel.josefsson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "uuid"] }
dotenv = "0.15.0"
uuid = "0.6.0"
clap = "2.33.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
rocket_cors = "0.5.2"
rocket = "0.4.5"
diesel_migrations = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "uuid"]
